Cambios y avances hechos
che reto pndejo

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,12 +1,67 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Encriptador Web Challenge</title>
+    <link rel="stylesheet" href="../Css/estilos.css">
 </head>
+
 <body>
-    
+
+    <header>
+
+        <h1 class="h1"> Challenge Oracle & Alura: "Encriptador Web"</h1>
+
+    </header>
+
+    <div class="contenedor">
+
+        <div class="encriptar">
+
+            <textarea name="texto-a-encriptar" id="encriptar-text" class="encriptar-text" cols="30" rows="10"
+                placeholder="Escribe el mensaje"></textarea>
+        </div>
+
+        <div class="encriptado">
+            <img src="../Img/Muñeco.png" alt="Placeholder" class="placeholder-image" id="placeholder-image">
+            <textarea name="texto-desencriptado" id="encriptado-text" cols="30" rows="10" readonly="true"
+                class="encriptado-text"></textarea>
+        </div>
+
+    </div>
+
+    <div class="boton-container">
+        <button class="boton" id="encriptar" onclick="codificarTexto()" focus> Encriptar </button>
+
+        <button class=" boton" id="desencriptar" onclick="decodificarTexto()"> Desencriptar </button>
+
+        <button class="boton" id="copiar" onclick="copyText()"> Copiar </button>
+
+        <button class="boton" id="borrar" onclick="borrarTexto()">Borrar textos</button>
+    </div>
+
+    <footer>
+
+        <h2 font-size="20px" class="h2">Redes sociales y relacionados:</h2>
+        <ul>
+            <li><a href="https://www.oracle.com/"> Página de Oracle </a></li>
+            <li><a href="https://www.alura.com/"> Página de Alura </a> </li>
+            <li><a href="https://github.com/SergioMainJG">Perfil de github </a> </li>
+            <li><a href="https://www.linkedin.com/in/arce-roldán-sergio-elías/">Perfil de linkedin </a></li>
+        </ul>
+
+    </footer>
+
+
+
 </body>
+
+<script src="../JS/codificador.js"></script>
+<script src="../JS/decodificador.js"></script>
+<script src="../JS/copiar.js"></script>
+<script src="../JS/borrar.js"></script>
+
 </html>
