Cambio de directorios

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador Web Challenge</title>
-    <link rel="stylesheet" href="./Css/estilos.css">
+    <link rel="stylesheet" href="./CSS/estilos.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div class="encriptar">
 
             <textarea name="texto-a-encriptar" id="encriptar-text" class="encriptar-text" cols="30" rows="10"
-                placeholder="Escribe el mensaje" ></textarea>
+                placeholder="Escribe el mensaje"></textarea>
         </div>
 
         <div class=" encriptado">
